# monolith

./: README.md  index.html  package-lock.json  package.json
docs/: serial-port-flow.md
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/monolith-ascii/: Cargo.toml
src-tauri/crates/monolith-ascii/src/: lib.rs
src-tauri/crates/monolith-domain/: Cargo.toml
src-tauri/crates/monolith-domain/src/: cementing_record.rs  lib.rs
src-tauri/crates/monolith-modbus/: Cargo.toml
src-tauri/crates/monolith-serial/: Cargo.toml
src-tauri/crates/monolith-serial/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/app/: exit_app.rs  menu_app.rs  mod.rs
src-tauri/src/app/dialogs/: about_app.rs  agregat_menu.rs  dop_functions_menu.rs  editor_menu.rs  mod.rs
src-tauri/src/app/handler/: csv_path.rs  menu_handler.rs  mod.rs
src-tauri/src/app/handlers/: close_handler.rs  menu_handler.rs
src-tauri/src/command/: csv_command.rs  mod.rs
src-tauri/src/command/csv/: mod.rs
src-tauri/src/command/serial_port/: mod.rs  serial_dialog.rs
src-tauri/src/commands/serial_port/: mod.rs  serial_ascii.rs  serial_connect.rs  serial_dialog.rs  serial_list.rs  serial_select.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/csv/: errors.rs  mod.rs
src-tauri/src/domain/telemetry/: models.rs
src-tauri/src/services/: csv_manager.rs  mod.rs
src-tauri/src/services/csv_services/: csv_manager.rs  mod.rs
src-tauri/src/services/serial_port/: mod.rs  serial_scanner.rs  serial_service.rs
(+51 files in other folders)
