[package]
name = "monolith"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monolith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tokio = {version = "1.50.0", features = ["sync", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
thiserror = "2.0.18"
csv = "1.4.0"

# для тестирования - чтобы код проходил проверки github

[lints.clippy]
empty_line_after_doc_comments = "allow"
io_other_error = "allow"
redundant_closure = "allow"

[lints.rust]
unused_imports = "allow"
dead_code = "allow"

[lints.clippy]
needless_borrow = "allow"
enum_variant_names = "allow"